perf(架构): 优化ID生成器